--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Hello Jin2</title>
+	<title>Hello Jin2, pls plan the Miami trip</title>
 </head>
 <body>
 <h1>Hello Jin2</h1>
